--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "rehype-parse": "^9.0.1",
